add features panel

--- a/index.html
+++ b/index.html
@@ -119,5 +119,44 @@
         </div>
       </div>
     </div>
+    <div class="features-wrap">
+      <h1 class="features-wrap__title">Features for a better experience</h1>
+      <div class="features-wrap__features-container features-container">
+        <div class="features-container__video">
+          <h1 class="features-container__video video__title">
+            Video messaging
+          </h1>
+          <p class="features-container__video video__desc">
+            This software is very easy for you to manage. You can use it as you
+            wish.
+          </p>
+          <div class="features-container__video video__icon-circle">
+            <img src="./images/icons/video-icon.svg" class="video__icon" />
+          </div>
+        </div>
+        <div class="features-container__time">
+          <h1 class="features-container__time time__title">Save your time</h1>
+          <p class="features-container__time time__desc">
+            This software is very easy for you to manage. You can use it as you
+            wish.
+          </p>
+          <div class="features-container__time time__icon-circle">
+            <img src="./images/icons/time-icon.svg" class="time__icon" />
+          </div>
+        </div>
+        <div class="features-container__safe">
+          <h1 class="features-container__safe safe__title">
+            Keep safe & private
+          </h1>
+          <p class="features-container__safe safe__desc">
+            This software is very easy for you to manage. You can use it as you
+            wish.
+          </p>
+          <div class="features-container__safe safe__icon-circle">
+            <img src="./images/icons/safe-icon.svg" class="safe__icon" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
