add footer panel

--- a/index.html
+++ b/index.html
@@ -119,5 +119,40 @@
         </div>
       </div>
     </div>
+    <footer>
+      <h1 class="footer__slogan">
+        Ready to grow your business? Start with Apex, become faster every second
+      </h1>
+      <button class="footer__btn">Start Chatting Now</button>
+      <div class="footer__bar">
+        <img src="./images/apex-logo.svg" class="footer__bar__logo" />
+        <div class="footer__bar__menu footer__menu">
+          <a href="" target="blank" class="footer__menu__about">About</a>
+          <a href="" target="blank" class="footer__menu__features">Features</a>
+          <a href="" target="blank" class="footer__menu__works">Works</a>
+          <a href="" target="blank" class="footer__menu__support">Support</a>
+        </div>
+        <div class="footer__bar__socials socials">
+          <a href="" target="blank" class="socials__twitter">
+            <img src="./images/icons/twitter-icon.svg" />
+          </a>
+          <a href="" target="blank" class="socials__facebook">
+            <img src="./images/icons/facebook-icon.svg" />
+          </a>
+          <a href="" target="blank" class="socials__instagram">
+            <img src="./images/icons/instagram-icon.svg" />
+          </a>
+          <a href="" target="blank" class="socials__github">
+            <img src="./images/icons/github-icon.svg" />
+          </a>
+        </div>
+      </div>
+      <img src="./images/footer-line.svg" class="footer__line" />
+      <div class="footer__foot foot">
+        <p class="foot__copyright">© Copyright 2022, All Rights Reserved</p>
+        <a href="" target="blank" class="foot__privacy">Privacy Policy</a>
+        <a href="" target="blank" class="foot__terms">Terms & Conditions</a>
+      </div>
+    </footer>
   </body>
 </html>
