change footer copyright symbol to number code in html

--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@
       </div>
       <img src="./images/footer-line.svg" class="footer__line" />
       <div class="footer__foot foot">
-        <p class="foot__copyright">© Copyright 2022, All Rights Reserved</p>
+        <p class="foot__copyright">
+          &#169; Copyright 2022, All Rights Reserved
+        </p>
         <a href="" target="blank" class="foot__privacy">Privacy Policy</a>
         <a href="" target="blank" class="foot__terms">Terms & Conditions</a>
       </div>
